# DiplomaAgents

./: CMakeLists.txt  README.md  logformat.md  main  main.cpp  monitoring-port.cpp  повышенная активность сканирования.cpp
Access/: access  access.cpp  access.md  access_final.cpp  accesstestprog
Access/ssh_gdm2/: sshd_gdm  sshd_gdm.cpp
For_FileSystem/: File monitoring.txt  FileMonitoring.cpp  FileMonitoring.h
For_SSH_GDM/: For_SSH_GDM.cpp  For_SSH_GDM.h
For_ScanUsers/: For_ScanUsers.cpp  For_ScanUsers.h
For_USB/: For_USB.cpp  For_USB.h
For_exec_priv/: Monitor_exec.cpp  Monitor_exec.h
Functions_for_all/: For_all.cpp  For_all.h
Only_FileSystem/: Final_fileAccess.cpp
Only_SSH_GDM/: ssh_gdm2.cpp
Only_ScanUsers/: Only_ScanUsers.cpp
Only_USB/: Only-USB.cpp
Only_exec_priv/: Monitor_Exec_priv.cpp
SSH_GDM/: ssh_gdm2.cpp
USB/: Only-USB.cpp
delete/: audit_monitor  delseatch  delseatch.cpp  delseatchinotify  delseatchinotify.cpp  delseatchinotify.txt
delete2/: test.txt
удаленное подключение/: CMakeLists.txt  remaccess.cpp
